app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;
:root {
  --font-poppins: "Poppins", sans-serif;
}
body,
html {
  margin: 0;
  font-family: var(--font-poppins);
  max-width: 100vw;
  height: 100%;
  box-sizing: border-box;
  width: 100vw;
  background: rgb(8, 9, 13);
  background: linear-gradient(90deg, rgba(8, 9, 13, 1) 0%, rgba(23, 30, 47, 1) 60%);
}
.mimic-bg {
  background: rgb(8, 9, 13);

  background: linear-gradient(90deg, rgba(8, 9, 13, 1) 0%, rgba(23, 30, 47, 1) 60%);
}
input[type="color"],
input[type="date"],
input[type="datetime"],
input[type="datetime-local"],
input[type="email"],
input[type="month"],
input[type="number"],
input[type="password"],
input[type="search"],
input[type="tel"],
input[type="text"],
input[type="time"],
input[type="url"],
input[type="week"],
select:focus,
textarea {
  font-size: 16px;
}

